# pyjop

./: .all-contributorsrc  .cruft.json  .editorconfig  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  asv.conf.json  noxfile.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codecov_action.yml  semantic-release.yml
benchmarks/: __init__.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  __init__.py  conf.py  index.rst  reference.md  wordlist.txt
pyjop/: EntityBase.py  EntityClasses.py  Enums.py  Network.py  Vector.py  __init__.py
src/pyjop/: EntityBase.py  EntityClasses.py  Enums.py  Network.py  Vector.py  __init__.py
tests/: __init__.py  test_pyjop.py  test_vector.py
